--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node ./dist/server.js"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
+    "tsx": "^4.5.0",
     "typescript": "^5.3.2"
   }
 }
