--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.10",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
@@ -37,8 +39,11 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "tsx": "^4.5.0",
     "typescript": "^5.3.2"
   }
