--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA
+DATABASE_URL = 'postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA'
