--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv-cli": "^7.3.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "joi": "^17.11.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
