--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx ts-node-dev src/server.ts",
     "build": "tsc",
-    "start": "node src/server.js"
+    "start": "node ./server.js"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
