--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "ts-jest": "^29.1.1",
     "tsx": "^4.5.0",
     "typescript": "^5.3.2"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
